FRONTEND - CORREÇÕES NOS METODOS DE TEMPO E ATUALIZAÇÃO DE PARÂMETROS

--- a/frontend/horacerta/src/app/paginas/dashboard/dashboard.component.html
+++ b/frontend/horacerta/src/app/paginas/dashboard/dashboard.component.html
@@ -26,8 +26,8 @@
               <div class="col-sm-12">
                 <div style="margin-right:  30px">
                   <div style="text-align: right;">
-                    <h3>14:19:43</h3>
-                    <p>22 de Março de 2018</p>
+                    <h3>{{ horaAtual }}</h3>
+                    <p>{{ (dataAtual) }}</p>
                   </div>
                 </div>
               </div>
