--- a/frontend/horacerta/src/app/layout-admin-lte/top-menu/top-menu.component.html
+++ b/frontend/horacerta/src/app/layout-admin-lte/top-menu/top-menu.component.html
@@ -4,11 +4,11 @@
   <a routerLink="/dashboard" class="logo">
     <!-- mini logo for sidebar mini 50x50 pixels -->
     <span class="logo-mini">
-      <b>H</b>
+      <b>HR</b>
     </span>
     <!-- logo for regular state and mobile devices -->
     <span class="logo-lg">
-      <b>Hora</b>certa</span>
+      <b>HR</b>CERTA</span>
   </a>
 
   <!-- Header Navbar: style can be found in header.less -->
@@ -22,16 +22,16 @@
       <ul class="nav navbar-nav">
         <li class="dropdown user user-menu">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-            <img src="../../assets/imagens/avatar.png" class="user-image" alt="User Image">
+            <img src="../../assets/imagens/user_001.png" class="user-image" alt="User Image">
             <span class="hidden-xs">Pedro Ribeiro</span>
           </a>
           <ul class="dropdown-menu">
             <!-- User image -->
             <li class="user-header">
-              <img src="../../assets/imagens/avatar.png" class="img-circle" alt="User Image">
+              <img src="../../assets/imagens/user_001.png" class="img-circle" alt="User Image">
               <p>
                Pedro Ribeiro
-                <!-- <small>Membro desde {{anoAtual() | date:'yyyy'}}</small> -->
+                <small>Desenvolvedor Júnior</small>
               </p>
             </li>
             <!-- Menu Footer-->
