BACKEND - AUTENTICAÇÃO BÁSICA

--- a/frontend/horacerta/src/app/layout-admin-lte/top-menu/top-menu.component.html
+++ b/frontend/horacerta/src/app/layout-admin-lte/top-menu/top-menu.component.html
@@ -37,7 +37,9 @@
             <!-- Menu Footer-->
             <div class="user-footer">
                 <div class="col-xs-12">
-                  <button type="submit" (click)="logout()" class="btn btn-primary btn-block btn-flat">Deslogar</button>
+                  <form action="/logout">
+                      <button type="submit" class="btn btn-primary btn-block btn-flat">Deslogar</button>
+                  </form>
                 </div>
             </div>
           </ul>
