FRONTEND - listagem dos registros

--- a/frontend/horacerta/src/app/layout-admin-lte/menu/menu.component.html
+++ b/frontend/horacerta/src/app/layout-admin-lte/menu/menu.component.html
@@ -24,8 +24,15 @@
         </a>
       </li>
 
-      <li class="treeview">
-        <a href="#">
+      <li class="active">
+          <a routerLink="/historico">
+            <i class="ion ion-speedometer"></i>
+            <span>Histórico</span>
+          </a>
+        </li>
+
+      <!-- <li class="treeview">
+        <a routerLink="/dashboard">
           <i class="ion ion-ios-alarm-outline"></i>
           <span>Histórico de Horas</span>
           <span class="pull-right-container">
@@ -38,7 +45,7 @@
               <i class="fa fa-circle-o"></i>Saldo de Horas</a>
           </li>
         </ul>
-      </li>
+      </li> -->
 
     </ul>
   </section>
