FRONTEND - [AJUSTES] NOVAS CORREÇÕES

--- a/frontend/horacerta/src/app/layout-admin-lte/menu/menu.component.html
+++ b/frontend/horacerta/src/app/layout-admin-lte/menu/menu.component.html
@@ -24,28 +24,28 @@
         </a>
       </li>
 
-      <li class="active">
+      <!-- <li class="active">
           <a routerLink="/historico">
             <i class="ion ion-speedometer"></i>
             <span>Histórico</span>
           </a>
-        </li>
+        </li> -->
 
-      <!-- <li class="treeview">
-        <a routerLink="/dashboard">
+      <li class="treeview">
+        <a routerLink="#">
           <i class="ion ion-ios-alarm-outline"></i>
-          <span>Histórico de Horas</span>
+          <span>Histórico Geral</span>
           <span class="pull-right-container">
             <i class="fa fa-angle-left pull-right"></i>
           </span>
         </a>
         <ul class="treeview-menu">
           <li>
-            <a routerLink="editar/perfil">
-              <i class="fa fa-circle-o"></i>Saldo de Horas</a>
+            <a routerLink="/historico">
+              <i class="fa fa-circle-o"></i>Histórico de Horas</a>
           </li>
         </ul>
-      </li> -->
+      </li>
 
     </ul>
   </section>
