FRONTEND -  VINCULO PESSOA

--- a/frontend/horacerta/src/app/layout-admin-lte/menu/menu.component.html
+++ b/frontend/horacerta/src/app/layout-admin-lte/menu/menu.component.html
@@ -32,7 +32,7 @@
         </li> -->
 
       <li class="treeview">
-        <a routerLink="#">
+        <a href="#">
           <i class="ion ion-ios-alarm-outline"></i>
           <span>Histórico Geral</span>
           <span class="pull-right-container">
