--- a/frontend/horacerta/src/app/paginas/dashboard/dashboard.component.html
+++ b/frontend/horacerta/src/app/paginas/dashboard/dashboard.component.html
@@ -35,7 +35,7 @@
             <div class="row">
               <div class="col-sm-3">
                 <div style="text-align: center">
-                  <h1>{{ parametros.entrada ? parametros.entrada : '--:--' }}</h1>
+                  <h1>{{ parametros.entrada ? (parametros.entrada | date:'HH:mm:ss')  : '--:--' }}</h1>
                   <p>Entrada</p>
                 </div>
               </div>
