--- a/frontend/horacerta/src/app/paginas/dashboard/dashboard.component.html
+++ b/frontend/horacerta/src/app/paginas/dashboard/dashboard.component.html
@@ -42,21 +42,21 @@
 
               <div class="col-sm-3">
                 <div style="text-align: center">
-                  <h1>{{ parametros.pausa ? parametros.pausa : '--:--' }}</h1>
+                  <h1>{{ parametros.pausaini ? (parametros.pausaini | date:'HH:mm:ss') : '--:--' }}</h1>
                   <p>Pausa</p>
                 </div>
               </div>
 
               <div class="col-sm-3">
                 <div style="text-align: center">
-                  <h1>{{ parametros.retorno ? parametros.retorno : '--:--' }}</h1>
+                  <h1>{{ parametros.pausafim ? (parametros.pausafim | date:'HH:mm:ss') : '--:--' }}</h1>
                   <p>Retorno</p>
                 </div>
               </div>
 
               <div class="col-sm-3">
                 <div style="text-align: center">
-                  <h1>{{ parametros.saida ? parametros.saida : '--:--' }}</h1>
+                  <h1>{{ parametros.saida ? (parametros.saida | date:'HH:mm:ss') : '--:--' }}</h1>
                   <p>Saída</p>
                 </div>
               </div>
