FRONTEND - AUTENTICAÇÃO BÁSICA

--- a/frontend/horacerta/src/app/layout-admin-lte/top-menu/top-menu.component.html
+++ b/frontend/horacerta/src/app/layout-admin-lte/top-menu/top-menu.component.html
@@ -30,17 +30,15 @@
             <li class="user-header">
               <img src="../../assets/imagens/user_001.png" class="img-circle" alt="User Image">
               <p>
-               Pedro Ribeiro
+                Pedro Ribeiro
                 <small>Desenvolvedor Júnior</small>
               </p>
             </li>
             <!-- Menu Footer-->
             <div class="user-footer">
-                <div class="col-xs-12">
-                  <form action="/logout">
-                      <button type="submit" class="btn btn-primary btn-block btn-flat">Deslogar</button>
-                  </form>
-                </div>
+              <div class="col-xs-12">
+                <a href="/logout" class="btn btn-primary btn-block btn-flat">Deslogar</a>
+              </div>
             </div>
           </ul>
         </li>
