--- a/frontend/horacerta/src/app/layout-admin-lte/top-menu/top-menu.component.html
+++ b/frontend/horacerta/src/app/layout-admin-lte/top-menu/top-menu.component.html
@@ -23,15 +23,15 @@
         <li class="dropdown user user-menu">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">
             <img src="../../assets/imagens/user_001.png" class="user-image" alt="User Image">
-            <span class="hidden-xs">Pedro Ribeiro</span>
+            <span class="hidden-xs">{{pessoa?.nome}}</span>
           </a>
           <ul class="dropdown-menu">
             <!-- User image -->
             <li class="user-header">
               <img src="../../assets/imagens/user_001.png" class="img-circle" alt="User Image">
               <p>
-                Pedro Ribeiro
-                <small>Desenvolvedor Júnior</small>
+                {{pessoa?.nome}}
+                <small>{{pessoa?.cargo}}</small>
               </p>
             </li>
             <!-- Menu Footer-->
