FRONTEND - REGISTRAR PONTO #5

--- a/frontend/horacerta/src/app/paginas/dashboard/dashboard.component.html
+++ b/frontend/horacerta/src/app/paginas/dashboard/dashboard.component.html
@@ -65,9 +65,10 @@
             <br>
             <div>
               <br>
-              <div style="text-align: center">
+              <div style="text-align: center; margin-bottom:  13%">
                 <button type="submit" [disabled]="parametros.saida" (click)="registrarPonto()" class="btn btn-flat btn-primary">REGISTRAR AGORA</button>
               </div>
+              <!-- <div style="margin-bottom:  13%"></div> -->
             </div>
           </div>
         </div>
