--- a/frontend/horacerta/src/app/layout-admin-lte/menu/menu.component.html
+++ b/frontend/horacerta/src/app/layout-admin-lte/menu/menu.component.html
@@ -7,7 +7,7 @@
         <img src="../../assets/imagens/userAvatar.png" class="img-circle" alt="User Image">
       </div>
       <div class="pull-left info">
-        <p>{{pessoa?.nome}}</p>
+        <p>{{pessoa?.nome | nomeUsuario}}</p>
         <a routerLink="/dashboard">
           <i class="fa fa-circle text-success"></i> Online</a>
       </div>
