--- a/frontend/horacerta/src/app/paginas/historico/historico.component.html
+++ b/frontend/horacerta/src/app/paginas/historico/historico.component.html
@@ -15,7 +15,7 @@
   </section>
 
   <section class="content">
-    <div class="box box-default collapsed-box">
+    <!-- <div class="box box-default collapsed-box">
       <div class="box-header with-border">
         <h3 class="box-title">Filtro de Horas</h3>
 
@@ -23,7 +23,6 @@
           <button type="button" class="btn btn-box-tool" data-widget="collapse">
             <i class="fa fa-plus"></i>
           </button>
-          <!-- <button type="button" class="btn btn-box-tool" data-widget="remove"><i class="fa fa-remove"></i></button> -->
         </div>
       </div>
       <div class="box-body">
@@ -63,7 +62,7 @@
             data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i> Aguarde...">Reenviar</button>
         </div>
       </div>
-    </div>
+    </div> -->
     <div class="row" style="margin-bottom:  12%">
       <div class="col-xs-12">
         <div class="box">
@@ -77,7 +76,7 @@
                 <div class="col-sm-6">
                   <div class="dataTables_length" id="example1_length">
                     <label>
-                      <select name="example1_length" aria-controls="example1" class="form-control input-sm">
+                      <select name="example1_length" aria-controls="example1" class="form-control input-sm" [(ngModel)]="qtdPorPagina" (change)="paginar(1)">
                         <option value="10">10</option>
                         <option value="25">25</option>
                         <option value="50">50</option>
@@ -88,7 +87,7 @@
                 <div class="col-sm-6" style="text-align:right">
                   <div id="example1_filter" class="dataTables_filter">
                     <label>Pesquisar:
-                      <input type="text" class="form-control input-sm" placeholder="Autorização" aria-controls="example1">
+                      <input type="text" class="form-control input-sm" placeholder="" aria-controls="example1">
                     </label>
                   </div>
                 </div>
@@ -116,7 +115,7 @@
                       <td class="text-center">{{ h.saida | date:'HH:mm:ss' }}</td>
                       <td class="text-center">{{ h.saldo | date:'HH:mm:ss' }}</td>
                     </tr>
-                    <tr class="odd" *ngIf="registros < 1">
+                    <tr class="odd" *ngIf="totalRegistro < 1">
                       <td valign="top" colspan="24" class="dataTables_empty" style="text-align: center">Nenhum registro
                         correspondente encontrado
                       </td>
