FRONTEND - AJUSTE NO TAMANHO DA FONTE

--- a/frontend/horacerta/src/app/paginas/historico/historico.component.html
+++ b/frontend/horacerta/src/app/paginas/historico/historico.component.html
@@ -14,7 +14,7 @@
     </ol>
   </section>
 
-  <section class="content">
+  <section class="content" style="font-size: 15px">
     <!-- <div class="box box-default collapsed-box">
       <div class="box-header with-border">
         <h3 class="box-title">Filtro de Horas</h3>
