--- a/frontend/horacerta/src/app/paginas/historico/historico.component.html
+++ b/frontend/horacerta/src/app/paginas/historico/historico.component.html
@@ -1,5 +1,4 @@
 <div class="content-wrapper">
-
   <section class="content-header">
     <h1>
       HoraCerta
@@ -14,7 +13,7 @@
     </ol>
   </section>
 
-  <section class="content" style="font-size: 15px">
+  <section class="content" style="font-size: 13px">
     <!-- <div class="box box-default collapsed-box">
       <div class="box-header with-border">
         <h3 class="box-title">Filtro de Horas</h3>
@@ -63,7 +62,7 @@
         </div>
       </div>
     </div> -->
-    <div class="row" style="margin-bottom:  12%">
+    <div class="row">
       <div class="col-xs-12">
         <div class="box">
           <div class="box-header">
