--- a/frontend/horacerta/src/app/paginas/dashboard/dashboard.component.html
+++ b/frontend/horacerta/src/app/paginas/dashboard/dashboard.component.html
@@ -35,38 +35,43 @@
             <div class="row">
               <div class="col-sm-3">
                 <div style="text-align: center">
-                  <h1>{{ parametros.entrada ? (parametros.entrada | date:'HH:mm:ss')  : '--:--' }}</h1>
+                  <input type="text" class="inputHora" specialCharacters="[':']" [patterns]="customPatterns" mask="00:00" [ngModel]="parametros.entrada || '--:--'" (ngModelChange)="parametros.entrada = $event" [minlength]="tamMinimo"/>
                   <p>Entrada</p>
                 </div>
               </div>
 
               <div class="col-sm-3">
                 <div style="text-align: center">
-                  <h1>{{ parametros.pausaini ? (parametros.pausaini | date:'HH:mm:ss') : '--:--' }}</h1>
+                  <!-- <h1>{{ parametros.pausaini ? (parametros.pausaini | date:'HH:mm:ss') : '--:--' }}</h1> -->
+                  <input type="text" class="inputHora" specialCharacters="['-']"  [patterns]="customPatterns" mask="00:00" [ngModel]="parametros.pausaini || '--:--'" (ngModelChange)="parametros.pausaini = $event" [minlength]="tamMinimo" [disabled]="!parametros.entrada"/>
                   <p>Pausa</p>
                 </div>
               </div>
 
               <div class="col-sm-3">
                 <div style="text-align: center">
-                  <h1>{{ parametros.pausafim ? (parametros.pausafim | date:'HH:mm:ss') : '--:--' }}</h1>
+                  <!-- <h1>{{ parametros.pausafim ? (parametros.pausafim | date:'HH:mm:ss') : '--:--' }}</h1> -->
+                  <input type="text" class="inputHora" specialCharacters="['-']"  [patterns]="customPatterns" mask="00:00" [ngModel]="parametros.pausafim || '--:--'" (ngModelChange)="parametros.pausafim = $event" [minlength]="tamMinimo" [disabled]="!parametros.pausaini"/>
                   <p>Retorno</p>
                 </div>
               </div>
 
               <div class="col-sm-3">
                 <div style="text-align: center">
-                  <h1>{{ parametros.saida ? (parametros.saida | date:'HH:mm:ss') : '--:--' }}</h1>
+                  <!-- <h1>{{ parametros.saida ? (parametros.saida | date:'HH:mm:ss') : '--:--' }}</h1> -->
+                  <input type="text" class="inputHora" specialCharacters="['-']"  [patterns]="customPatterns" mask="00:00" [ngModel]="parametros.saida || '--:--'" (ngModelChange)="parametros.saida = $event" [minlength]="tamMinimo" [disabled]="!parametros.pausafim"/>
                   <p>Saída</p>
                 </div>
               </div>
+
+              <div class="erroPonto" id="erroPonto" style="display: none;">Ponto inválido!</div>
 
             </div>
             <br>
             <div>
               <br>
               <div style="text-align: center; margin-bottom:  13%">
-                <button type="submit" [disabled]="parametros.saida" (click)="registrarPonto()" class="btn btn-flat btn-primary">REGISTRAR AGORA</button>
+                <button type="submit" (click)="registrarPonto()" class="btn btn-flat btn-primary">REGISTRAR PONTO</button>
               </div>
               <!-- <div style="margin-bottom:  13%"></div> -->
             </div>
