--- a/frontend/horacerta/src/app/paginas/dashboard/dashboard.component.html
+++ b/frontend/horacerta/src/app/paginas/dashboard/dashboard.component.html
@@ -23,6 +23,9 @@
 
           <div class="box-body">
             <div class="row">
+              <div class="col-sm-12" id="alertContainer"></div>    
+            </div>
+            <div class="row">
               <div class="col-sm-12">
                 <div style="margin-right:  30px">
                   <div style="text-align: right;">
@@ -63,15 +66,12 @@
                   <p>Saída</p>
                 </div>
               </div>
-
-              <div class="erroPonto" id="erroPonto" style="display: none;">Ponto inválido!</div>
-
             </div>
             <br>
             <div>
               <br>
               <div style="text-align: center; margin-bottom:  13%">
-                <button type="submit" (click)="registrarPonto()" class="btn btn-flat btn-primary">REGISTRAR PONTO</button>
+                <button type="submit" (click)="registrarPonto()" class="btn btn-flat btn-primary"[disabled]="disablePontoButton">REGISTRAR PONTO</button>
               </div>
               <!-- <div style="margin-bottom:  13%"></div> -->
             </div>
