--- a/frontend/horacerta/src/app/paginas/dashboard/dashboard.component.html
+++ b/frontend/horacerta/src/app/paginas/dashboard/dashboard.component.html
@@ -38,7 +38,7 @@
             <div class="row">
               <div class="col-sm-3">
                 <div style="text-align: center">
-                  <input type="text" class="inputHora" specialCharacters="[':']" [patterns]="customPatterns" mask="00:00" [ngModel]="parametros.entrada || '--:--'" (ngModelChange)="parametros.entrada = $event" [minlength]="tamMinimo"/>
+                  <input type="text" class="inputHora" specialCharacters="[':']" [patterns]="customPatterns" mask="00:00" [ngModel]="parametros.entrada || '--:--'" (ngModelChange)="parametros.entrada = $event" [minlength]="tamMinimo" [disabled]="pontoDaVez != 'entrada'"/>
                   <p>Entrada</p>
                 </div>
               </div>
@@ -46,7 +46,7 @@
               <div class="col-sm-3">
                 <div style="text-align: center">
                   <!-- <h1>{{ parametros.pausaini ? (parametros.pausaini | date:'HH:mm:ss') : '--:--' }}</h1> -->
-                  <input type="text" class="inputHora" specialCharacters="['-']"  [patterns]="customPatterns" mask="00:00" [ngModel]="parametros.pausaini || '--:--'" (ngModelChange)="parametros.pausaini = $event" [minlength]="tamMinimo" [disabled]="!parametros.entrada"/>
+                  <input type="text" class="inputHora" specialCharacters="['-']"  [patterns]="customPatterns" mask="00:00" [ngModel]="parametros.pausaini || '--:--'" (ngModelChange)="parametros.pausaini = $event" [minlength]="tamMinimo" [disabled]="pontoDaVez != 'pausaini'"/>
                   <p>Pausa</p>
                 </div>
               </div>
@@ -54,7 +54,7 @@
               <div class="col-sm-3">
                 <div style="text-align: center">
                   <!-- <h1>{{ parametros.pausafim ? (parametros.pausafim | date:'HH:mm:ss') : '--:--' }}</h1> -->
-                  <input type="text" class="inputHora" specialCharacters="['-']"  [patterns]="customPatterns" mask="00:00" [ngModel]="parametros.pausafim || '--:--'" (ngModelChange)="parametros.pausafim = $event" [minlength]="tamMinimo" [disabled]="!parametros.pausaini"/>
+                  <input type="text" class="inputHora" specialCharacters="['-']"  [patterns]="customPatterns" mask="00:00" [ngModel]="parametros.pausafim || '--:--'" (ngModelChange)="parametros.pausafim = $event" [minlength]="tamMinimo" [disabled]="pontoDaVez != 'pausafim'"/>
                   <p>Retorno</p>
                 </div>
               </div>
@@ -62,7 +62,7 @@
               <div class="col-sm-3">
                 <div style="text-align: center">
                   <!-- <h1>{{ parametros.saida ? (parametros.saida | date:'HH:mm:ss') : '--:--' }}</h1> -->
-                  <input type="text" class="inputHora" specialCharacters="['-']"  [patterns]="customPatterns" mask="00:00" [ngModel]="parametros.saida || '--:--'" (ngModelChange)="parametros.saida = $event" [minlength]="tamMinimo" [disabled]="!parametros.pausafim"/>
+                  <input type="text" class="inputHora" specialCharacters="['-']"  [patterns]="customPatterns" mask="00:00" [ngModel]="parametros.saida || '--:--'" (ngModelChange)="parametros.saida = $event" [minlength]="tamMinimo" [disabled]="pontoDaVez != 'saida'"/>
                   <p>Saída</p>
                 </div>
               </div>
@@ -71,7 +71,7 @@
             <div>
               <br>
               <div style="text-align: center; margin-bottom:  13%">
-                <button type="submit" (click)="registrarPonto()" class="btn btn-flat btn-primary"[disabled]="disablePontoButton">REGISTRAR PONTO</button>
+                <button type="submit" (click)="registrarPonto()" class="btn btn-flat btn-primary" [disabled]="disablePontoButton">REGISTRAR PONTO</button>
               </div>
               <!-- <div style="margin-bottom:  13%"></div> -->
             </div>
