FRONTEND - CORREÇÃO DA TELA EM TAMANHOS MENORES

--- a/frontend/horacerta/src/app/layout-admin-lte/top-menu/top-menu.component.html
+++ b/frontend/horacerta/src/app/layout-admin-lte/top-menu/top-menu.component.html
@@ -37,7 +37,7 @@
             <!-- Menu Footer-->
             <div class="user-footer">
               <div class="col-xs-12">
-                <a href="/logout" class="btn btn-primary btn-block btn-flat">Deslogar</a>
+                <a href="/logout" class="btn btn-primary btn-block btn-flat">Sair</a>
               </div>
             </div>
           </ul>
