--- a/frontend/horacerta/src/app/paginas/historico/historico.component.html
+++ b/frontend/horacerta/src/app/paginas/historico/historico.component.html
@@ -112,7 +112,7 @@
                       <td class="text-center">{{ h.pausaini | date:'HH:mm:ss'}}</td>
                       <td class="text-center">{{ h.pausafim | date:'HH:mm:ss' }}</td>
                       <td class="text-center">{{ h.saida | date:'HH:mm:ss' }}</td>
-                      <td class="text-center">{{ h.saldo | date:'HH:mm:ss' }}</td>
+                      <td class="text-center">{{ h.saldo | saldo }}</td>
                     </tr>
                     <tr class="odd" *ngIf="totalRegistro < 1">
                       <td valign="top" colspan="24" class="dataTables_empty" style="text-align: center">Nenhum registro
@@ -131,6 +131,8 @@
               *ngIf="totalRegistro">
               </hr-paginar>
               <!-- FIM PAGINAÇÃO -->
+              <label>Saldo Total: {{ saldoTotal | saldo }}
+              </label>
             </div>
           </div>
         </div>
