FRONTEND - CORREÇÃO DE BUG NO UTIL DE INPUT DE HORA

--- a/frontend/horacerta/src/app/paginas/dashboard/dashboard.component.html
+++ b/frontend/horacerta/src/app/paginas/dashboard/dashboard.component.html
@@ -71,7 +71,7 @@
             <div>
               <br>
               <div style="text-align: center; margin-bottom:  13%">
-                <button type="submit" (click)="registrarPonto()" class="btn btn-flat btn-primary" [disabled]="disablePontoButton">REGISTRAR PONTO</button>
+                <button type="submit" (click)="registrarPonto()" class="btn btn-flat btn-primary" id="registrarPontoButton">REGISTRAR PONTO</button>
               </div>
               <!-- <div style="margin-bottom:  13%"></div> -->
             </div>
