--- a/frontend/horacerta/src/app/paginas/historico/historico.component.html
+++ b/frontend/horacerta/src/app/paginas/historico/historico.component.html
@@ -184,7 +184,7 @@
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default pull-left" data-dismiss="modal">Fechar</button>
-            <button type="button" (click)="novoPerfil()" class="btn btn-primary" [disabled]="salvarAtivo" >Salvar</button>
+            <button type="button" (click)="novoPerfil()" class="btn btn-primary" id="salvarAtivoButton" >Salvar</button>
           </div>
         </div>
         <!-- /.modal-content -->
