--- a/frontend/horacerta/src/styles.css
+++ b/frontend/horacerta/src/styles.css
@@ -1,20 +1,28 @@
 /* You can add global styles to this file, and also import other style files */
-.inputHora {
-    -webkit-appearance: none;
-    outline: none;
-    background:rgba(0,0,0,0);
-    border:none;
-    font-family: 'Source Sans Pro',sans-serif;
-    margin-top: 20px;
-    margin-bottom: 10px;
-    font-weight: 500;
-    line-height: 1.1;
-    color: inherit;
-    margin: .67em 0;
-    text-align: center;
-    font-size: 36px;
-    width: 100%;
+
+a {
+  cursor: pointer;
+  text-decoration: none;
+  color: inherit;
 }
+
+.inputHora {
+  -webkit-appearance: none;
+  outline: none;
+  background: rgba(0, 0, 0, 0);
+  border: none;
+  font-family: 'Source Sans Pro', sans-serif;
+  margin-top: 20px;
+  margin-bottom: 10px;
+  font-weight: 500;
+  line-height: 1.1;
+  color: inherit;
+  margin: .67em 0;
+  text-align: center;
+  font-size: 36px;
+  width: 100%;
+}
+
 .horaInvalida {
-    color: red;
+  color: red;
 }
