FRONTEND - CONFIGURAÇÃO DE USUÁRIO

--- a/frontend/horacerta/src/app/layout-admin-lte/menu/menu.component.html
+++ b/frontend/horacerta/src/app/layout-admin-lte/menu/menu.component.html
@@ -46,7 +46,21 @@
           </li>
         </ul>
       </li>
-
+      <li class="treeview">
+        <a href="#">
+          <i class="ion ion-android-options"></i>
+          <span>Configurações</span>
+          <span class="pull-right-container">
+            <i class="fa fa-angle-left pull-right"></i>
+          </span>
+        </a>
+        <ul class="treeview-menu">
+          <li>
+            <a routerLink="/editar/perfil">
+              <i class="fa fa-circle-o"></i> Perfil Usuário</a>
+          </li>
+        </ul>
+      </li>
     </ul>
   </section>
   <!-- /.sidebar -->
