--- a/frontend/horacerta/src/app/layout-admin-lte/menu/menu.component.html
+++ b/frontend/horacerta/src/app/layout-admin-lte/menu/menu.component.html
@@ -4,7 +4,8 @@
     <!-- Sidebar user panel -->
     <div class="user-panel">
       <div class="pull-left image">
-        <img src="../../assets/imagens/userAvatar.png" class="img-circle" alt="User Image">
+        <img src="../../assets/imagens/userAvatar.png" *ngIf="!imagem" class="img-circle" alt="User Image">
+        <img src={{imagem}} *ngIf="imagem" class="img-circle" alt="User Image">
       </div>
       <div class="pull-left info">
         <p>{{pessoa?.nome | nomeUsuario}}</p>
