--- a/frontend/horacerta/src/app/paginas/historico/historico.component.html
+++ b/frontend/horacerta/src/app/paginas/historico/historico.component.html
@@ -107,10 +107,10 @@
                   <tbody>
                     <tr *ngFor="let h of popularTabela(registros)">
                       <td class="text-center">{{ h.dataRegistro | date:'dd/MM/yyyy' }}</td>
-                      <td class="text-center">{{ h.entrada | date:'HH:mm' }}</td>
-                      <td class="text-center">{{ h.pausaini | date:'HH:mm'}}</td>
-                      <td class="text-center">{{ h.pausafim | date:'HH:mm' }}</td>
-                      <td class="text-center">{{ h.saida | date:'HH:mm' }}</td>
+                      <td class="text-center" [class.horaFaltando]="!h.entrada">{{ h.entrada | date:'HH:mm' }}</td>
+                      <td class="text-center" [class.horaFaltando]="!h.pausaini">{{ h.pausaini | date:'HH:mm'}}</td>
+                      <td class="text-center" [class.horaFaltando]="!h.pausafim">{{ h.pausafim | date:'HH:mm' }}</td>
+                      <td class="text-center" [class.horaFaltando]="!h.saida">{{ h.saida | date:'HH:mm' }}</td>
                       <td class="text-center">{{ h.saldo | saldo }}</td>
                       <td style="text-align: center">
                         <a data-toggle="modal" data-target="#modal-default" (click)="setPontoAtual(h)"><i class="fa fa-fw fa-edit"></i></a>
