--- a/frontend/horacerta/src/app/paginas/configuracao/configuracao.component.html
+++ b/frontend/horacerta/src/app/paginas/configuracao/configuracao.component.html
@@ -31,7 +31,7 @@
 
           <div class="tab-content">
             <div class="col-sm-12" *ngIf="!chave_msg">
-              <!-- <e-mensagem></e-mensagem> -->
+              <hr-mensagem></hr-mensagem>
             </div>
             <div class="active tab-pane" id="perfil">
               <div class="form-horizontal">
