--- a/frontend/horacerta/src/app/paginas/historico/historico.component.html
+++ b/frontend/horacerta/src/app/paginas/historico/historico.component.html
@@ -134,13 +134,24 @@
               <label>Saldo Total: {{ saldoTotal | saldo }}
               </label>
               <div id="alertContainer"></div>
+
+              <!-- <div class="row justify-content-end">
+                <div class="col-lg-1 col-lg-offset-11" style="padding-bottom: 10px;">
+                  <button title="Adicionar Perfil" class="mdl-button mdl-js-button mdl-button--fab mdl-button--colored"
+                    data-toggle="modal" data-target="#adicionarPonto" (click)="setNovoPonto()">
+                    <i class="material-icons">add</i>
+                  </button>
+                </div>
+              </div> -->
+
+            
             </div>
           </div>
         </div>
       </div>
     </div>
     <!-- inicio-modal-content -->
-    <div class="modal fade" id="modal-default" style="display: none;">
+    <div class="modal fade" id="modal-default"  style="display: none;">
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
